@@ -127,7 +127,7 @@ HRESULT STDMETHODCALLTYPE EditingDelegate::shouldBeginEditingInDOMRange(
         return E_POINTER;
     }
 
-    if (::layoutTestController->dumpEditingCallbacks() && !done)
+    if (::gLayoutTestController->dumpEditingCallbacks() && !done)
         _tprintf(TEXT("EDITING DELEGATE: shouldBeginEditingInDOMRange:%s\n"), dump(range));
 
     *result = m_acceptsEditing;
@@ -144,7 +144,7 @@ HRESULT STDMETHODCALLTYPE EditingDelegate::shouldEndEditingInDOMRange(
         return E_POINTER;
     }
 
-    if (::layoutTestController->dumpEditingCallbacks() && !done)
+    if (::gLayoutTestController->dumpEditingCallbacks() && !done)
         _tprintf(TEXT("EDITING DELEGATE: shouldEndEditingInDOMRange:%s\n"), dump(range));
 
     *result = m_acceptsEditing;
@@ -163,7 +163,7 @@ HRESULT STDMETHODCALLTYPE EditingDelegate::shouldInsertNode(
         TEXT("WebViewInsertActionDropped"),
     };
 
-    if (::layoutTestController->dumpEditingCallbacks() && !done)
+    if (::gLayoutTestController->dumpEditingCallbacks() && !done)
         _tprintf(TEXT("EDITING DELEGATE: shouldInsertNode:%s replacingDOMRange:%s givenAction:%s\n"), dumpPath(node), dump(range), insertactionstring[action]);
 
     return S_OK;
@@ -187,7 +187,7 @@ HRESULT STDMETHODCALLTYPE EditingDelegate::shouldInsertText(
         TEXT("WebViewInsertActionDropped"),
     };
 
-    if (::layoutTestController->dumpEditingCallbacks() && !done)
+    if (::gLayoutTestController->dumpEditingCallbacks() && !done)
         _tprintf(TEXT("EDITING DELEGATE: shouldInsertText:%s replacingDOMRange:%s givenAction:%s\n"), text ? text : TEXT(""), dump(range), insertactionstring[action]);
 
     *result = m_acceptsEditing;
@@ -204,7 +204,7 @@ HRESULT STDMETHODCALLTYPE EditingDelegate::shouldDeleteDOMRange(
         return E_POINTER;
     }
 
-    if (::layoutTestController->dumpEditingCallbacks() && !done)
+    if (::gLayoutTestController->dumpEditingCallbacks() && !done)
         _tprintf(TEXT("EDITING DELEGATE: shouldDeleteDOMRange:%s\n"), dump(range));
 
     *result = m_acceptsEditing;
@@ -233,7 +233,7 @@ HRESULT STDMETHODCALLTYPE EditingDelegate::shouldChangeSelectedDOMRange(
         TEXT("TRUE")
     };
 
-    if (::layoutTestController->dumpEditingCallbacks() && !done)
+    if (::gLayoutTestController->dumpEditingCallbacks() && !done)
         _tprintf(TEXT("EDITING DELEGATE: shouldChangeSelectedDOMRange:%s toDOMRange:%s affinity:%s stillSelecting:%s\n"), dump(currentRange), dump(proposedRange), affinitystring[selectionAffinity], boolstring[stillSelecting]);
 
     *result = m_acceptsEditing;
@@ -251,7 +251,7 @@ HRESULT STDMETHODCALLTYPE EditingDelegate::shouldApplyStyle(
         return E_POINTER;
     }
 
-    if (::layoutTestController->dumpEditingCallbacks() && !done)
+    if (::gLayoutTestController->dumpEditingCallbacks() && !done)
         _tprintf(TEXT("EDITING DELEGATE: shouldApplyStyle:%s toElementsInDOMRange:%s\n"), TEXT("'style description'")/*[[style description] UTF8String]*/, dump(range));
 
     *result = m_acceptsEditing;
@@ -269,7 +269,7 @@ HRESULT STDMETHODCALLTYPE EditingDelegate::shouldChangeTypingStyle(
         return E_POINTER;
     }
 
-    if (::layoutTestController->dumpEditingCallbacks() && !done)
+    if (::gLayoutTestController->dumpEditingCallbacks() && !done)
         _tprintf(TEXT("EDITING DELEGATE: shouldChangeTypingStyle:%s toStyle:%s\n"), TEXT("'currentStyle description'"), TEXT("'proposedStyle description'"));
 
     *result = m_acceptsEditing;
@@ -286,7 +286,7 @@ HRESULT STDMETHODCALLTYPE EditingDelegate::doPlatformCommand(
         return E_POINTER;
     }
 
-    if (::layoutTestController->dumpEditingCallbacks() && !done)
+    if (::gLayoutTestController->dumpEditingCallbacks() && !done)
         _tprintf(TEXT("EDITING DELEGATE: doPlatformCommand:%s\n"), command ? command : TEXT(""));
 
     *result = m_acceptsEditing;
@@ -296,7 +296,7 @@ HRESULT STDMETHODCALLTYPE EditingDelegate::doPlatformCommand(
 HRESULT STDMETHODCALLTYPE EditingDelegate::webViewDidBeginEditing( 
     /* [in] */ IWebNotification* notification)
 {
-    if (::layoutTestController->dumpEditingCallbacks() && !done) {
+    if (::gLayoutTestController->dumpEditingCallbacks() && !done) {
         BSTR name;
         notification->name(&name);
         _tprintf(TEXT("EDITING DELEGATE: webViewDidBeginEditing:%s\n"), name ? name : TEXT(""));
@@ -308,7 +308,7 @@ HRESULT STDMETHODCALLTYPE EditingDelegate::webViewDidBeginEditing(
 HRESULT STDMETHODCALLTYPE EditingDelegate::webViewDidChange( 
     /* [in] */ IWebNotification *notification)
 {
-    if (::layoutTestController->dumpEditingCallbacks() && !done) {
+    if (::gLayoutTestController->dumpEditingCallbacks() && !done) {
         BSTR name;
         notification->name(&name);
         _tprintf(TEXT("EDITING DELEGATE: webViewDidBeginEditing:%s\n"), name ? name : TEXT(""));
@@ -320,7 +320,7 @@ HRESULT STDMETHODCALLTYPE EditingDelegate::webViewDidChange(
 HRESULT STDMETHODCALLTYPE EditingDelegate::webViewDidEndEditing( 
     /* [in] */ IWebNotification *notification)
 {
-    if (::layoutTestController->dumpEditingCallbacks() && !done) {
+    if (::gLayoutTestController->dumpEditingCallbacks() && !done) {
         BSTR name;
         notification->name(&name);
         _tprintf(TEXT("EDITING DELEGATE: webViewDidEndEditing:%s\n"), name ? name : TEXT(""));
@@ -332,7 +332,7 @@ HRESULT STDMETHODCALLTYPE EditingDelegate::webViewDidEndEditing(
 HRESULT STDMETHODCALLTYPE EditingDelegate::webViewDidChangeTypingStyle( 
     /* [in] */ IWebNotification *notification)
 {
-    if (::layoutTestController->dumpEditingCallbacks() && !done) {
+    if (::gLayoutTestController->dumpEditingCallbacks() && !done) {
         BSTR name;
         notification->name(&name);
         _tprintf(TEXT("EDITING DELEGATE: webViewDidChangeTypingStyle:%s\n"), name ? name : TEXT(""));
@@ -344,7 +344,7 @@ HRESULT STDMETHODCALLTYPE EditingDelegate::webViewDidChangeTypingStyle(
 HRESULT STDMETHODCALLTYPE EditingDelegate::webViewDidChangeSelection( 
     /* [in] */ IWebNotification *notification)
 {
-    if (::layoutTestController->dumpEditingCallbacks() && !done) {
+    if (::gLayoutTestController->dumpEditingCallbacks() && !done) {
         BSTR name;
         notification->name(&name);
         _tprintf(TEXT("EDITING DELEGATE: webViewDidChangeSelection:%s\n"), name ? name : TEXT(""));
